kubernetes/system/immich/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    pod-security.kubernetes.io/enforce: baseline
    homelab.kfir.dev/private-gateway-access: "true"
